force-app/main/default/objects/Library_Book_Loan__c/fields/Borrower__c.field-meta.xml
<CustomField>
    <fullName>Borrower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DigiLibrary app</description>
    <inlineHelpText>Choose a contact for borrowing this book</inlineHelpText>
    <label>Borrower</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Library Book Loans</relationshipLabel>
    <relationshipName>Library_Book_Loans1</relationshipName>
    <type>Lookup</type>
</CustomField>