force-app/main/default/objects/Library_Book_Loan__c/fields/Loan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Start_Date__c</fullName>
    <description>DigiLibrary app</description>
    <inlineHelpText>Enter when this loan starts</inlineHelpText>
    <label>Loan Start Date</label>
    <type>Date</type>
</CustomField>