force-app/main/default/objects/Library_Book_Loan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Book__c</columns>
    <columns>Borrower__c</columns>
    <columns>Loan_Start_Date__c</columns>
    <columns>Loan_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>